# docs/swagger.json
@@ -25,6 +25,27 @@
                 "responses": {}
             }
         },
+        "/refresh": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Refresh",
+                "operationId": "token-refresh",
+                "parameters": [
+                    {
+                        "description": "refresh tokens",
+                        "name": "dto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TokensDto"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/register": {
             "post": {
                 "produces": [
@@ -89,6 +110,17 @@
                     "type": "string"
                 },
                 "plainPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.TokensDto": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
                     "type": "string"
                 }
             }
